# websockify-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: build.yml
ci/: before_deploy.ps1  before_deploy.sh
warp-embed/: Cargo.toml  README.md
warp-embed/data/: index.html
warp-embed/data/bar/: index.htm
warp-embed/examples/: test-embedded.rs
warp-embed/src/: lib.rs  test.rs
warp-websockify/: Cargo.toml  README.md
warp-websockify/src/: error.rs  lib.rs
websockify-rs/: Cargo.toml
websockify-rs/src/: main.rs
