[package]
name = "warp-embed"
version = "0.1.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "websockify implementation for warp"
readme = "README.md"
homepage = "https://github.com/informationsea/websockify-rs"
repository = "https://github.com/informationsea/websockify-rs"
keywords = ["embedded-file", "warp"]
categories = ["web-programming::server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.2" }
rust-embed = "5"
mime_guess = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }