[package]
name = "warp-websockify"
version = "0.3.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "websockify implementation for warp"
readme = "README.md"
homepage = "https://github.com/informationsea/websockify-rs"
repository = "https://github.com/informationsea/websockify-rs"
keywords = ["websocket", "websockify", "warp"]
categories = ["web-programming::websocket", "web-programming::http-server", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3" }
tokio = { version = "1.2", features = ["macros"] }
futures = "0.3"
thiserror = "1"
log = "0.4"