[package]
name = "websockify-rs"
version = "0.3.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp-websockify = { version = "0.3", path = "../warp-websockify" }
warp-embed = { version = "^0.3" }
warp = { version = "0.3" }
tokio = { version = "1.2", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
log = "0.4"
pretty_env_logger = "0.4"
rust-embed = "5"
clap = "2"
